Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,10 +57,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "p = 0.5"
    ]
   },
   {
@@ -73,11 +76,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "q = 1-p\n",
+    "P = q*p\n",
+    "P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p=0.5\n",
+    "q=1-p\n",
+    "p*p + p*q + q*p + q*q"
    ]
   },
   {
@@ -89,11 +128,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03125"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your answer here"
+    "#Your answer here\n",
+    "n = 5\n",
+    "P = p*q**(n-1)\n",
+    "P"
    ]
   },
   {
@@ -106,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +167,8 @@
     "    \"\"\"y is a discrete random variable. It should be an integer that is greater then zero.\n",
     "    p is the probability of a success for the Bernoulli experiment to be conducted.\n",
     "    This function should return the probability that the first successful Bernoulli experiment will occur on the yth trial.\"\"\"\n",
-    "    prob = #The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
+    "    q = 1-p\n",
+    "    prob = p*q**(y-1) #The probability that the first successful bernoulli experiment occurs on the yth trial.\n",
     "    return prob"
    ]
   },
@@ -128,12 +182,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03151247048623045"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Code and answer here\n",
+    "prob = geometric_dist(10,0.05)\n",
+    "prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Code and answer here\n",
-    "prob = "
+    "tot = 0\n",
+    "for i in range(1,1000001):\n",
+    "    #print(geometric_dist(i, 0.05))\n",
+    "    tot+=geometric_dist(i, 0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999999999999991"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tot"
    ]
   },
   {
@@ -146,12 +244,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3584859224085419"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = 0.95**20\n",
+    "prob"
    ]
   },
   {
@@ -165,12 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05042099999999998"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "prob = geometric_dist(6, 0.3)\n",
+    "prob"
    ]
   },
   {
@@ -183,12 +305,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16807000000000005"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code and answer here\n",
-    "prob = "
+    "temp_prob = 1\n",
+    "for i in range(1,6):\n",
+    "    temp_prob -= geometric_dist(i, 0.3)\n",
+    "prob = temp_prob\n",
+    "prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.16806999999999994"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.7**5"
    ]
   },
   {
@@ -217,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
